Better overflow fix

--- a/style/style.css
+++ b/style/style.css
@@ -118,7 +118,7 @@ a.footerlink:hover {
   bottom: 0;
   width: 100%;
   background-color: #2b6ca3;
-  height: 10%;
+  height: 90px;
   text-align: center;
   z-index: 5;
 }
@@ -129,7 +129,7 @@ a.footerlink:hover {
   bottom: 0;
   width: 100%;
   background-color: #2b6ca3;
-  height: 10%;
+  height: 90px;
   text-align: center;
   padding: 0;
   display: flex;
@@ -144,8 +144,8 @@ a.footerlink:hover {
   padding-top: 2%;
   font-size: 1em;
   font-weight: bold;
-  padding-bottom: 10%;
-  margin-bottom: 20%;
+  padding-bottom: 5%;
+  margin-bottom: 92px;
 }
 #membershipcontain > p {
   font-weight: bold;
@@ -178,11 +178,12 @@ a.footerlink:hover {
 #bodycontain {
   display: flex;
   flex-direction: column-reverse;
+  margin-bottom: 92px;
 }
 
 /*Form Specific*/
 #contactForm {
-  margin-bottom: 20%;
+  margin-bottom: 92px;
 }
 #formContain {
   width: 80vw;
@@ -219,9 +220,7 @@ textarea {
   text-align: center;
   margin: 0 auto;
 }
-#submitbutton {
-  margin-bottom: 10%;
-}
+
 #newSubmitContain {
   padding-top: 2%;
   width: 100%;
@@ -238,7 +237,6 @@ textarea {
   text-decoration: none;
   display: inline-block;
   font-size: 1.25em;
- 
 }
 
 #newSubmitContain > button {
@@ -491,10 +489,11 @@ ul.bxslider {
     width: 40%;
     padding: 0;
     margin: 0 auto;
+    margin-bottom: 92px;
   }
   /*Form Specific*/
   #contactForm {
-    margin-bottom: 11%;
+    margin-bottom: 92px;
   }
   #formContain {
     padding-bottom: 0%;
@@ -526,7 +525,7 @@ ul.bxslider {
   #bodycontain {
     display: flex;
     flex-direction: row;
-    margin-bottom: 11%;
+    margin-bottom: 92px;
   }
   .slidecontain {
     padding-top: 2%;
@@ -547,7 +546,7 @@ ul.bxslider {
     line-height: 3.052rem;
   }
   #contactForm {
-    margin-bottom: 11%;
+    margin-bottom: 92px;
   }
   .flexContain {
     display: flex;
@@ -574,10 +573,7 @@ ul.bxslider {
   #formContain {
     padding: 0;
   }
-  #submitbutton {
-    margin-bottom: 11%;
-  }
-  #textcontain  {
-    margin-bottom: 11%;
+  #bodycontain  {
+    margin-bottom: 92px;
   }
 }
